add copy button to copy password created

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         </div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
+          <button id="copy" class="btn">Copy</button>
+          <button id="one-more" class="btn">One More</button>
+          <button id="reset" class="btn">Reset</button>
         </div>
       </div>
     </div>
