--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="wrapper">
@@ -25,10 +28,12 @@
           ></textarea>
         </div>
         <div class="card-footer">
-          <button id="generate" class="btn">Generate Password</button>
-          <button id="copy" class="btn">Copy</button>
-          <button id="one-more" class="btn">One More</button>
-          <button id="reset" class="btn">Reset</button>
+          <div class="btn-block">
+            <button id="generate" class="btn">Generate Password</button>
+            <button id="copy" class="btn">Copy</button>
+            <button id="more" class="btn">More</button>
+            <button id="reset" class="btn">Reset</button>
+          </div>
         </div>
       </div>
     </div>
